  + Features:
    * [#65] Log caller interation
    * [#39] show project name in channel list
    * [#79] Problem of resource refference while imporing
  + Bugs:
    * [#44] fix version display to follow release version
    * [#66] import call flow from another project does not work (cross project and domain)
    * [#104] Error voice recording with 2 variables

1.4.0-rc2 (2013-12-20 kakada <kakada@instedd.org)
  + Bugs:
    * [#64] refactoring AWS backup/restore, reminder schedule task and write it to log file
    * [#] set caller id for originate outgoing call
    * [#67] fix error on queued call view when not_before is nil

1.4.0-rc1 (2013-12-16 kakada <kakada@instedd.org)
  + Features:
    * [#43] Show calls start and finish time according to project time zone
    * [#33] Add text annotation for recorded audio
    * [#47] Cron Job reminder schedule filter by prefix
    * [#40] Possibility to select many channel in reminder schedule. continue to [#59]
    * [#59] Migration data from single channel to multi channel
  + Bugs:
    * [#48] improve call log status
    * [#46] fix SMS step in erlang
    * [#45] show number of retries in call logs
    * [#50] remove column id and queued call from call logs
    * [#23] fix problem on call duration calculation

1.3.6 (2013-12-12 kakada <kakada@instedd.org)
  + Bugs:
    * fix properly expand SIP domains for custom sip channels

1.3.5 (2013-11-14 kakada <kakada@instedd.org)
  + Bugs:
    * [#56] re-fix previous migration and check existing binary and integer address to register 
            reminder in erlang

1.3.4 (2013-11-13 kakada <kakada@instedd.org)
  + Bugs:
    * [#56] fix reminder group contacts serialize/deserialize Ruby and Erlang to be consistence and
            restore and migrate reminder group contacts with backup database

1.3.3 (2013-11-05 kakada <kakada@instedd.org)
  + Bugs:
    * [#37] Log fusion table datetime field in project timezone

1.3.2 (2013-11-04 kakada <kakada@instedd.org)
  + Bugs: